# server-picker-pl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs  menu.rs
